fix overflow

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -54,3 +54,8 @@
     color: $color-white;
     //text-align: center;
 }
+
+.ptr {
+    height: fit-content;
+    overflow: visible;
+}
