--- a/src/App/pages/TokensPage/Tokens/Tokens.scss
+++ b/src/App/pages/TokensPage/Tokens/Tokens.scss
@@ -2,7 +2,7 @@
 
 .tokens-list {
     background: $color-white;
-    height: calc(100% - 40rem);
+    height: 100%;
     border-radius: 5rem 5rem 0 0;
 }
 
